# CompGraficaLista2

./: CMakeLists.txt  README.md  main.cpp
src/: main.cpp
src/shaders/: fragment.txt  vertex.txt
